--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -475,6 +475,7 @@
                 android:layout_weight="1"/>
 
             <LinearLayout
+                android:id="@+id/ll_main_category_phone_sdcard_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
