--- a/app/src/main/res/layout/item_txt_preview.xml
+++ b/app/src/main/res/layout/item_txt_preview.xml
@@ -7,9 +7,12 @@
 
     <TextView
         android:id="@+id/tv_txt_preview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1111"
+        android:paddingBottom="20dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="20dp"
         android:textColor="@color/black_70"
-        android:textSize="14sp"/>
+        android:textSize="16sp"/>
 </FrameLayout>
