--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -83,8 +83,8 @@
 
 
     <!-- Bottom operate bar -->
-    <color name="dark_gray">#363636</color>
-    <color name="middle_gray">#404040</color>
+    <color name="bottom_bar_item_pressed_color">#363636</color>
+    <color name="bottom_bar_item_normal_color">#404040</color>
     <color name="light_gray">#4c4c4c</color>
     <color name="light_gray1">#d4d4d6</color>
 
