--- a/app/src/main/res/layout/activity_clean_result.xml
+++ b/app/src/main/res/layout/activity_clean_result.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="2dp"
-            android:text="Cleaned"
+            android:text="@string/clean_result_cleaned"
             android:textColor="@color/black_40"
             android:textSize="16dp"/>
     </LinearLayout>
@@ -94,7 +94,7 @@
             android:layout_below="@+id/tv_trash_size_unit"
             android:layout_marginLeft="115dp"
             android:layout_marginStart="115dp"
-            android:text="Suggest"
+            android:text="@string/clean_suggest"
             android:textColor="@color/white"/>
     </RelativeLayout>
 </RelativeLayout>
