--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -66,7 +66,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_toRightOf="@+id/tv_trash_size_number"
                 android:textSize="16sp"
-                android:text="Suggest"
+                android:text="@string/clean_suggest"
                 android:textColor="@color/white"/>
 
             <ProgressBar
