--- a/app/src/main/res/layout/dialog_create_folder.xml
+++ b/app/src/main/res/layout/dialog_create_folder.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_gravity="start"
+        android:gravity="center_vertical"
         android:layout_marginTop="21dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
