--- a/app/src/main/res/layout/dialog_create_folder.xml
+++ b/app/src/main/res/layout/dialog_create_folder.xml
@@ -15,6 +15,8 @@
         android:layout_marginTop="21dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -29,6 +31,8 @@
         android:layout_marginTop="21dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:background="#FF8181"
         android:textColor="#FFFFFF"
         android:textSize="12dp"
