--- a/app/src/main/res/layout/activity_txt_preview.xml
+++ b/app/src/main/res/layout/activity_txt_preview.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/list_divider_line_color_f5f6ff"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <include layout="@layout/common_action_bar_without_search_blue_back"/>
