--- a/app/src/main/res/layout/activity_apk_manager.xml
+++ b/app/src/main/res/layout/activity_apk_manager.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@color/list_divider_line_color_f5f6ff"
     android:orientation="vertical"
     tools:context="com.jb.filemanager.function.apkmanager.AppManagerActivity">
