处理白名单页的显示问题

--- a/app/src/main/res/layout/activity_trash_ignore.xml
+++ b/app/src/main/res/layout/activity_trash_ignore.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/trash_ignore_root_layer"
              android:layout_width="match_parent"
+             android:fitsSystemWindows="true"
              android:layout_height="match_parent">
 
 </FrameLayout>
