--- a/app/src/main/res/layout/trash_ignore_view_layer.xml
+++ b/app/src/main/res/layout/trash_ignore_view_layer.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               xmlns:tools="http://schemas.android.com/tools"
+              android:fitsSystemWindows="true"
               android:background="#f2f2f2"
               tools:background="@color/colorAccent"
               android:orientation="vertical">
