--- a/app/src/main/res/layout/layout_expandable_list.xml
+++ b/app/src/main/res/layout/layout_expandable_list.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.jb.filemanager.ui.view.PinchImageView
+<ExpandableListView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/view_image_details_img"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="centerCrop"/>
+    android:childDivider="@null"
+    android:divider="@null"
+    android:dividerHeight="0px"
+    android:groupIndicator="@null"/>
