--- a/app/src/main/res/values-v21/dimens.xml
+++ b/app/src/main/res/values-v21/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="music_manager_title_height">68dp</dimen>
     <dimen name="trash_ignore_status_bar_height">24dp</dimen>
     <dimen name="trash_ignore_title_height">72dp</dimen>
+    <dimen name="system_status_bar_top_margin">24dp</dimen>
 </resources>
