--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -18,7 +18,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="#E7E9F3"/>
+            android:background="@color/common_bg"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -49,8 +49,10 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginRight="20dp"
             android:gravity="center_vertical"
+            android:drawableRight="@drawable/drawer_setting_switcher_selector"
+            android:drawableEnd="@drawable/drawer_setting_switcher_selector"
             android:drawableLeft="@drawable/ic_drawer_smart_charge"
             android:drawableStart="@drawable/ic_drawer_smart_charge"
             android:drawablePadding="15dp"
@@ -61,7 +63,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="#E7E9F3"/>
+            android:background="@color/common_bg"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -125,7 +127,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="#E7E9F3"/>
+            android:background="@color/common_bg"/>
 
         <TextView
             android:layout_width="match_parent"
