设置壁纸改成调用系统的设置壁纸

--- a/app/src/main/res/layout/fragment_image_details.xml
+++ b/app/src/main/res/layout/fragment_image_details.xml
@@ -39,7 +39,7 @@
             android:drawablePadding="16dp"
             android:drawableRight="@drawable/ic_set_wallpaper"
             android:gravity="center"
-            android:text="Set As Wallpaper"
+            android:text="@string/set_wall_paper"
             android:textColor="@color/white_40"
             android:textSize="@dimen/h5_12"
             tools:ignore="ContentDescription"/>
