--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -6,8 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/clean_trash_bg_red"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_top_red"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/clean_top_gradient_height"
+        android:src="@color/clean_trash_bg_red"/>
+
+    <ImageView
+        android:id="@+id/iv_top_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/clean_top_gradient_height"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
+        android:src="@drawable/clean_top_gradient"/>
+
+    <ImageView
+        android:id="@+id/iv_top_green"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/clean_top_gradient_height"
+        android:visibility="invisible"
+        android:src="@color/clean_trash_bg_blue"/>
 
     <ImageView
         android:layout_width="112dp"
@@ -21,6 +41,7 @@
 
     <LinearLayout
         android:id="@+id/ll_content"
+        android:layout_marginTop="@dimen/title_margin_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
