--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -72,7 +72,7 @@
     <color name="power_saving_menu_item_normal">#FFFFFFFF</color>
     <color name="power_saving_menu_item_pressed">#FFEDEDED</color>
     <color name="clean_trash_bg_red">#FFFF7D7D</color>
-    <color name="clean_trash_bg_blue">#FF44D6C3</color>
+    <color name="clean_trash_bg_blue">#00BBA0</color>
     <color name="list_divider_line_color_e7e9f3">#e7e9f3</color>
     <color name="list_divider_line_color_f5f6ff">#f5f6ff</color>
 
