--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,4 +36,6 @@
     <!--图片管理间隔-->
     <dimen name="image_interval_distance">6dp</dimen>
     <dimen name="system_status_bar_top_margin">0dp</dimen>
+    <dimen name="title_margin_top">0dp</dimen>
+    <dimen name="clean_top_gradient_height">153dp</dimen>
 </resources>
