--- a/app/src/main/res/layout/activity_zip_file.xml
+++ b/app/src/main/res/layout/activity_zip_file.xml
@@ -3,9 +3,8 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
                 android:background="@android:color/white"
-                android:orientation="vertical">
+                android:fitsSystemWindows="true">
 
     <com.jb.filemanager.ui.view.SearchTitleView
         android:id="@+id/search_title"
@@ -24,6 +23,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_below="@id/shadow"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
         app:matProg_barColor="#0084ff"
         app:matProg_barWidth="5dp"
         app:matProg_progressIndeterminate="true"/>
@@ -36,7 +37,8 @@
         android:divider="@android:color/transparent"
         android:groupIndicator="@null"
         android:overScrollMode="never"
-        android:scrollbars="none"/>
+        android:scrollbars="none"
+        android:visibility="gone"/>
 
     <com.jb.filemanager.ui.widget.BottomOperateBar
         android:id="@+id/bob_bottom_operator"
