--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -34,8 +34,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="@string/app_name"
+            android:text="@string/main_title"
             android:textColor="#B2000000"
+            android:textStyle="italic"
             android:textSize="20dp" />
 
         <ImageView
