--- a/app/src/main/res/layout/activity_clean_result.xml
+++ b/app/src/main/res/layout/activity_clean_result.xml
@@ -21,80 +21,48 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/iv_clean_result_button_blue"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="83dp"
             android:src="@drawable/trash_clean_icon_blue"
-            android:visibility="invisible"/>
+            android:visibility="visible"/>
 
-        <TextView
-            android:id="@+id/tv_clean_result_size"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:text="328"
-            android:textColor="@color/black_70"
-            android:textSize="48dp"/>
+            android:layout_marginTop="48dp"
+            android:gravity="center">
 
-        <TextView
-            android:id="@+id/tv_clean_result_size_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:text="MB"
-            android:textColor="@color/black_40"
-            android:textSize="16dp"/>
+            <TextView
+                android:id="@+id/tv_clean_result_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="328"
+                android:textColor="@color/clean_trash_bg_blue"
+                android:textSize="48dp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/tv_clean_result_size_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="16dp"
+                android:text="MB"
+                android:textColor="@color/clean_trash_bg_blue"
+                android:textSize="32dp"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_clean_result_cleaned"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="10dp"
             android:text="@string/clean_result_cleaned"
-            android:textColor="@color/black_40"
-            android:textSize="16dp"/>
+            android:textColor="#4c4c4c"
+            android:textSize="20sp"/>
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_blue_rect"
-        android:layout_height="135dp"
-        android:layout_below="@+id/ll_title"
-        android:layout_width="match_parent"
-        android:background="@color/clean_trash_bg_blue">
-
-        <TextView
-            android:id="@+id/tv_trash_size_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:textColor="@color/white"
-            android:textSize="48dp"
-            tools:text="328"/>
-
-        <TextView
-            android:id="@+id/tv_trash_size_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="115dp"
-            android:layout_marginStart="115dp"
-            android:layout_marginTop="40dp"
-            android:text="MB"
-            android:textColor="@color/white"/>
-
-        <TextView
-            android:id="@+id/tv_trash_suggest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_trash_size_unit"
-            android:layout_marginLeft="115dp"
-            android:layout_marginStart="115dp"
-            android:text="@string/clean_suggest"
-            android:textColor="@color/white"/>
-    </RelativeLayout>
 </RelativeLayout>
