--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/clean_trash_bg_red"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
@@ -117,8 +117,7 @@
 
         <FrameLayout
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:background="@color/white">
+            android:layout_width="match_parent">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_trash_group_list"
