--- a/app/src/main/res/drawable/extract_noti_progress_bg.xml
+++ b/app/src/main/res/drawable/extract_noti_progress_bg.xml
@@ -17,7 +17,7 @@
         <clip>
             <shape>
 
-                <solid android:color="#39bdac"/>
+                <solid android:color="#00BBA0"/>
             </shape>
         </clip>
     </item>
