--- a/app/src/main/res/layout/notification_extract_finish.xml
+++ b/app/src/main/res/layout/notification_extract_finish.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#39bdac"
+              android:background="#00BBA0"
               android:orientation="horizontal"
               android:paddingEnd="9dp"
               android:paddingLeft="24dp"
