--- a/app/src/main/res/layout/snack_bar_extract_finish.xml
+++ b/app/src/main/res/layout/snack_bar_extract_finish.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#39bdac">
+                android:background="#00BBA0">
 
     <TextView
         android:id="@+id/extract_noti_title"
