--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,12 +22,12 @@
     <color name="black_70">#B2000000</color>
     <!--规范-->
     <color name="common_bg">#F5F6FF</color>
-    <color name="common_style_green">#FF39BDAC</color>
+    <color name="common_style_green">#FF00BBA0</color>
     <!-- home -->
     <color name="main_tab_text_color_select">#B2000000</color>
     <color name="main_tab_text_color_normal">#66000000</color>
     <color name="main_tab_indicator">#42CBAE</color>
-    <color name="main_category_info_storage_value_color">#39BDAC</color>
+    <color name="main_category_info_storage_value_color">#00BBA0</color>
     <color name="main_category_info_photo_color">#85FFEB</color>
     <color name="main_category_info_music_color">#E1FF3C</color>
     <color name="main_category_info_video_color">#B4FF2B</color>
@@ -52,7 +52,7 @@
     <color name="common_status_bar_red">#E06C6C</color>
     <color name="common_action_bar_bg">#4FABFF</color>
     <color name="common_action_bar_search_under_line">#BABABA</color>
-    <color name="common_action_bar_search_cursor_color">#39BDAC</color>
+    <color name="common_action_bar_search_cursor_color">#00BBA0</color>
 
     <!-- feedback -->
     <color name="feedback_drop_box_background_pressed">#FFFFFF</color>
@@ -77,7 +77,7 @@
     <color name="list_divider_line_color_f5f6ff">#f5f6ff</color>
 
     <!-- dialog -->
-    <color name="dialog_confirm_color">#39BDAC</color>
+    <color name="dialog_confirm_color">#00BBA0</color>
     <color name="dialog_cancel_color">#000000</color>
     <color name="dialog_space_not_enough_need_more_text_color">#FF8181</color>
 
