--- a/app/src/main/res/drawable/tip_btu_shape.xml
+++ b/app/src/main/res/drawable/tip_btu_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:width="1dp" android:color="#FF00BBA0"/>
+    <stroke android:width="1dp" android:color="@color/common_style_green"/>
 
     <corners android:radius="1dp"/>
 </shape>
