--- a/app/src/main/res/layout/view_permission_alert.xml
+++ b/app/src/main/res/layout/view_permission_alert.xml
@@ -102,7 +102,7 @@
         android:layout_marginTop="22dp"
         android:background="@drawable/tip_btu_shape"
         android:gravity="center"
-        android:textColor="#FF00BBA0"
+        android:textColor="@color/common_style_green"
         android:textSize="@dimen/h3_16"
         android:textStyle="bold"
         android:text="@string/permission_dialog_dital_txt_tip"
