--- a/app/src/main/res/layout/trash_ignore_view_layer.xml
+++ b/app/src/main/res/layout/trash_ignore_view_layer.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               xmlns:tools="http://schemas.android.com/tools"
               android:fitsSystemWindows="true"
-              android:background="#f2f2f2"
+              android:background="@color/trash_ignore_bg"
               tools:background="@color/colorAccent"
               android:orientation="vertical">
     <!-- Title -->
