--- a/app/src/main/res/layout/common_action_bar_without_search_blue_back_2.xml
+++ b/app/src/main/res/layout/common_action_bar_without_search_blue_back_2.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_title"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="vertical"
+    android:layout_height="56dp"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:background="@color/colorAccent">
 
     <TextView
         android:id="@+id/tv_common_action_bar_title"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:drawableStart="@drawable/action_bar_back_drawable_selector_blue"
         android:drawableLeft="@drawable/action_bar_back_drawable_selector_blue"
         android:drawablePadding="17dp"
-        android:paddingLeft="17dp"
+        android:drawableStart="@drawable/action_bar_back_drawable_selector_blue"
         android:gravity="center"
+        android:paddingLeft="17dp"
         android:text="@string/clean_storage"
         android:textColor="@drawable/action_bar_back_text_selector_black"
         android:textSize="16dp"/>
@@ -26,10 +26,16 @@
         android:id="@+id/iv_common_action_bar_search"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_gravity="center"
         android:layout_alignParentRight="true"
-        android:scaleType="centerInside"
         android:layout_centerVertical="true"
-        android:visibility="gone"
-        android:src="@drawable/ic_action_bar_search"/>
+        android:layout_gravity="center"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_action_bar_search"
+        android:visibility="gone"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/main_shadow"/>
 </RelativeLayout>
