--- a/app/src/main/res/layout/activity_clean_result.xml
+++ b/app/src/main/res/layout/activity_clean_result.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:fitsSystemWindows="true"
     tools:context="com.jb.filemanager.function.trash.CleanResultActivity">
 
     <include
@@ -14,6 +13,7 @@
         layout="@layout/common_action_bar_without_search_blue_back"/>
 
     <View
+        android:visibility="gone"
         android:layout_below="@+id/ll_title"
         android:background="@drawable/main_shadow"
         android:layout_width="match_parent"
@@ -22,14 +22,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_below="@+id/ll_title"
-        android:layout_marginTop="6dp"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/iv_clean_result_button_blue"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="83dp"
             android:src="@drawable/trash_clean_icon_blue"
@@ -38,8 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:gravity="center">
+            android:layout_marginTop="49dp"
+            android:gravity="center_horizontal">
 
             <TextView
                 android:id="@+id/tv_clean_result_size"
@@ -50,15 +49,19 @@
                 android:textSize="48dp"
                 android:textStyle="bold"/>
 
+            <android.support.v4.widget.Space
+                android:layout_width="3dp"
+                android:layout_height="match_parent"/>
             <TextView
                 android:id="@+id/tv_clean_result_size_unit"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="3dp"
                 android:text="MB"
+                android:textStyle="bold"
                 android:textColor="@color/clean_trash_bg_blue"
-                android:textSize="32dp"/>
+                android:textSize="24dp"/>
 
         </LinearLayout>
 
@@ -67,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="4dp"
             android:text="@string/clean_result_cleaned"
             android:textColor="#4c4c4c"
             android:textSize="20sp"/>
