--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -32,7 +32,7 @@
     <ImageView
         android:layout_width="112dp"
         android:layout_height="120dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="@dimen/clean_trash_top"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:alpha="0.08"
