--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,23 +4,74 @@
     tools:ignore="ContentDescription"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:src="@drawable/img_splash_logo" />
+        android:layout_height="91dp"
+        android:layout_width="91dp"
+        android:translationX="-45.57dp"
+        android:translationY="-5.23dp"
+        android:src="@drawable/img_splash_circle" />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_height="119dp"
+        android:layout_width="119dp"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/img_splash_description"/>
+        android:layout_marginBottom="77dp"
+        android:translationX="92dp"
+        android:src="@drawable/img_splash_circle" />
+
+    <LinearLayout
+        android:id="@+id/ll_splash_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="vertical">
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/h3_16"
+            android:textColor="#4C4C4C"
+            android:textStyle="bold"
+            android:text="@string/app_name"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/h5_12"
+            android:textColor="#4C4C4C"
+            android:text="@string/splash_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        tools:layout_height="2dp"
+        android:layout_above="@id/ll_splash_bottom"
+        android:background="@color/common_bg"/>
+
+    <ImageView
+        android:layout_width="330dp"
+        android:layout_height="298dp"
+        android:src="@drawable/img_splash_middle"
+        android:layout_marginTop="117dp"
+        android:layout_centerHorizontal="true"/>
+
+    <ImageView
+        android:layout_width="62dp"
+        android:layout_height="62dp"
+        android:src="@mipmap/ic_launcher_round"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
