--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,6 +78,16 @@
         <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
+    <!--带有window背景的主题 透明背景-->
+    <style name="AppTheme.NoActionBar_FullScreen" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
+    </style>
+
     <!-- 自定义弹出框基础样式， 自定义样式的Dialog如需定义theme, 请继承此theme -->
     <style name="base_dialog_theme" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
