修改图片管理ui

--- a/app/src/main/res/layout/item_sub_image.xml
+++ b/app/src/main/res/layout/item_sub_image.xml
@@ -23,7 +23,7 @@
         android:visibility="gone"
         tools:visibility="visible"/>
 
-    <com.jb.filemanager.commomview.GroupSelectBox
+    <ImageView
         android:id="@+id/item_sub_image_gsb"
         android:layout_width="32dp"
         android:layout_height="32dp"
