--- a/app/src/main/res/layout/activity_applock_item.xml
+++ b/app/src/main/res/layout/activity_applock_item.xml
@@ -21,7 +21,8 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         tools:text="@string/app_name"
-        android:textSize="16dp"
+        android:textSize="@dimen/h5_12"
+        android:textStyle="bold"
         android:layout_toRightOf="@id/activity_applock_item_icon"
         android:textColor="#FF333333" />
 
