--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -28,16 +28,17 @@
             android:src="@drawable/ic_home_menu"
             android:scaleType="center"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/tv_main_action_bar_title"
+            android:layout_width="110dp"
+            android:layout_height="19dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_home_title"/>
+
+        <android.support.v4.widget.Space
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/main_title"
-            android:textColor="#B2000000"
-            android:textStyle="italic"
-            android:textSize="20dp" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
         <ImageView
             android:id="@+id/iv_main_action_bar_search"
@@ -77,7 +78,6 @@
                 app:tabIndicatorHeight="2dp"
                 app:tabIndicatorColor="@color/main_tab_indicator"
                 app:tabBackground="@drawable/bg_main_tab_selector" />
-
         </android.support.v4.view.ViewPager>
 
         <View
