--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -85,7 +85,8 @@
     <color name="popup_window_item_text_color">#5A5A5A</color>
 
 
-    <!-- Bottom operate bar -->
+    <!-- Bottom oper
+ate bar -->
     <color name="bottom_bar_item_pressed_color">#363636</color>
     <color name="bottom_bar_item_normal_color">#404040</color>
     <color name="light_gray">#4c4c4c</color>
